--- a/main.html
+++ b/main.html
@@ -3,12 +3,47 @@
 <html>
 
 <head>
+	<title>Portfolio</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+		<h1 role="heading">Portfolio</h1>
+		<nav role ="navigation">
+			<ul role="list">
+				<li role="listitem"><a href="#">Home</a></li>
+				<li role="listitem"><a href="#">Contact</a></li>
+				<li role="listitem"><a href="#">About</a></li>
+			</ul>
+		</nav>
+		
+	</header>
+	<main>
+		<section>
+			<img src="portfolio.jpg"  alt="portfolio image" role="img">
+			<p>the ffwiiw yuihgf wkpbj khijo pioe</p>
+			
+		</section>
+		<section>
+			<h2>Projects</h2>
+			<ul role="list">
+				<li role="listitem">project 1</li>
+				<li role="listitem">Project 2</li>
+				<li role="listitem">Project 3</li>
+				
+				
+				</ul>
+			
+			
+		</section>
+	</main>
+	
+	
     <script type="text/javascript" src="./script.js">
+	
+		
 </script>
 
 </body>
